@@ -1,3 +1,9 @@
+2005-11-15  Vincent Noel <vincent.noel@gmail.com>
+
+	* userprefs.c: (prefs_monospace_font_changed),
+	(prefs_menus_have_tearoff_changed), (prefs_connect): Listen to the
+	menus_have_tearoff gconf key.
+
 2005-11-15  Vincent Noel  <vincent.noel@gmail.com>
 
 	* about.c (logview_about): Add documenters in the about
